# django_bootmin

./: CHANGELOG.md  MANIFEST.in  Pipfile  requirements.txt  setup.cfg
django_bootmin/: __init__.py  apps.py  base.py  mixins.py  settings.py  sites.py  version.py
django_bootmin/templates/admin/: base.html  inspect.html
example/: settings.py  urls.py
example/app/: admin.py
example/app/migrations/: 0001_initial.py
