[metadata]
name = django-bootmin
version = attr: django_bootmin.__version__
url = https://github.com/realnoobs/django_bootmin
author = Rizki Sasri Dwitama
author_email = sasri.project@gmail.com
description = Django Bootstrap Admin
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks
project_urls =
    Documentation = https://github.com/realnoobs/django_bootmin
    Source = https://github.com/realnoobs/django_bootmin

[options]
python_requires = >=3.6
packages = django_bootmin
include_package_data = true
zip_safe = false
install_requires =
    django>=3.2.7,<4.0
    django-wkhtmltopdf>=3.4
    django-hookup>=0.0.1

[options.entry_points]

[options.extras_require]
pos = 

[bdist_rpm]

[flake8]
exclude = build,.git,.tox,./tests/.env
ignore = W504,W601,W503
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
known_first_party = django_bootmin
include_trailing_comma = true
known_django = django
line_length = 119
multi_line_output = 5
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
